[project]
name = "mountain-peak"
version = "0.1.0"
description = "A simple web service for storing and retrieving mountain peaks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
